Fill up requirements for publishing to Maven Central
Add GPG signing, project name, description, url, and developer, source control, and license information.